Large commit, see description:  - Update ClassTrust CTC format (allows for more hashes) - Begun work on RIFT and modloaders for Cornflower